summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: not found: value getDir
   while(getDir() != Direction.EAST){
         ^Moria:5: error: not found: value Direction
   while(getDir() != Direction.EAST){
                     ^Moria:15: error: not found: value getDir
     while(getDir() != Direction.WEST){
           ^Moria:15: error: not found: value Direction
     while(getDir() != Direction.WEST){
                       ^